# kfall-analysis

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
data/: README.md
scripts/: evaluate.py  predict.py  train.py
src/kfall/: __init__.py  config.py  utils.py
src/kfall/data/: __init__.py  loader.py  preprocessor.py
src/kfall/evaluation/: __init__.py  evaluator.py
src/kfall/models/: __init__.py  crhnn.py  hopfield.py  optimizer.py
src/kfall/training/: __init__.py  callbacks.py  trainer.py
tests/: test_data.py  test_model.py  test_optimizer.py
